ingress/nginx-ingress-controller-deployment.yaml
apiVersion:  extensions/v1beta1
kind: Deployment

metadata:
	name: nginx-ingress-controller
	labels:
		app: nginx-ingress

spec:
	replicas: 2
	selector:
		matchLabels:
			app: nginx-ingress
	template:
		metadata:
			labels:
				app: nginx-ingress
	spec:
		containers:
		-	name: nginx-ingress-controller
			image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:latest
			ports:
			- 	containerPort: 80

		args:
		-    /nginx-ingress-controller
		-    --configmap=$(POD_NAMESPACE) /nginx-configuration

		-	name: POD_NAME
			valueFrom:
				fieldRef:
					fieldPath: metadata.name
		-	name: POD_NAMESPACE
			valueFrom:
				fieldRef:
					fieldPath: metadata.namespace

		ports:
			-	name: http
				containerPort: 80
			-	name: https:
				containerPort: 443
			
		restartPolicy:  Always
