ingress/nginx-ingress-controller-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nginx-ingress-service

spec:
  type: NodePort

  selector:
    app: nginx-ingress-controller

  ports:
  - nginx-ingress-port
    targetPort: 30080
    port: 30080
    nodePort: 80
