ingress/nginx-ingress-service.yaml
apiVersion: v1
kind: Ingress

metadata:
  name: nginx-ingress-service

spec:
  type: NodePort

  selector:
    app: nginx-ingress-controller

  ports:
  - name: http
    targetPort: 80
    port: 80
    nodePort: 30080
  - name: https
    targetPort: 443
    port: 443
    nodePort: 30443
