ingress/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: nginx-ingress

spec:
  rules:
    - host: malikiah.io
      http:
        paths:
          - backend:
              serviceName: exampleService
              servicePort: 80
            path: /
