ingress/default-backend-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-http-backend-network-policy
spec:
  podSelector:
    matchLabels:
      app: default-http-backend
  ingress:
  - {}
